--- a/BolWallet/Views/AccountPage.xaml
+++ b/BolWallet/Views/AccountPage.xaml
@@ -2,11 +2,7 @@
     x:Class="BolWallet.Views.AccountPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
-    x:DataType="viewModels:AccountViewModel"
-	xmlns:helpers="clr-namespace:BolWallet.Helpers"
-    BackgroundColor="{DynamicResource SecondaryColor}"
-    xmlns:local="clr-namespace:BolWallet.Converters">
+    BackgroundColor="{DynamicResource SecondaryColor}">
 
 	<ContentPage.ToolbarItems>
 		<ToolbarItem 
@@ -145,6 +141,110 @@
 						</Label>
 					</StackLayout>
 				</Frame>
+                
+                <Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+                    <StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
+                        <Label Text="Certifier" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
+                        <Label Text="{Binding BolAccount.IsCertifier}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
+                    </StackLayout>
+                    <Frame.Triggers>
+                        <DataTrigger TargetType="Frame" Binding="{Binding BolAccount.IsCertifier}" Value="True">
+                            <Setter Property="BackgroundColor" Value="#27C1F3"/>
+                        </DataTrigger>
+                        <DataTrigger  TargetType="Frame" Binding="{Binding BolAccount.IsCertifier}" Value="False">
+                            <Setter Property="BackgroundColor" Value="#582cd4"/>
+                        </DataTrigger>
+                    </Frame.Triggers>
+                </Frame>
+                
+                <Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+                    <StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
+                        <Label Text="Number of Certifications" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
+                        <Label Text="{Binding BolAccount.Certifications}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
+                    </StackLayout>
+                </Frame>
+                
+                <Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+                    <StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
+                        <Label Text="Certifiers" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
+                        <Grid Padding="10" BackgroundColor="#582cd4">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="1*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0"
+                                   HorizontalOptions="Center"
+                                   VerticalOptions="Center"
+                                   Text="CodeName"
+                                   FontAttributes="Bold"
+                                   TextColor="White"/>
+                            <Label Grid.Column="1"
+                                   HorizontalOptions="Center"
+                                   VerticalOptions="Center"
+                                   Text="Block Height"
+                                   FontAttributes="Bold"
+                                   TextColor="White"/>
+                        </Grid>
+                        <ListView ItemsSource="{Binding Certifiers}" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <ViewCell>
+                                        <Grid Padding="10" BackgroundColor="#582cd4">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="1*" />
+                                                <ColumnDefinition Width="1*" />
+                                            </Grid.ColumnDefinitions>
+                                            <Label Grid.Column="0"
+                                                   HorizontalOptions="Center"
+                                                   VerticalOptions="Center"
+                                                   Text="{Binding Key}"
+                                                   FontAttributes="Bold"
+                                                   TextColor="White"/>
+                                            <Label Grid.Column="1"
+                                                   HorizontalOptions="Center"
+                                                   VerticalOptions="Center"
+                                                   Text="{Binding Value}"
+                                                   FontAttributes="Bold"
+                                                   TextColor="White"/>
+                                        </Grid>
+                                    </ViewCell>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackLayout>
+                </Frame>
+                
+                <Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+                    <StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
+                        <Label Text="Certification Requests" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
+                        <ListView ItemsSource="{Binding CertificationRequests}" HorizontalOptions="Center" >
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <ViewCell>
+                                        <Grid Padding="10" BackgroundColor="#582cd4">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto" />
+                                            </Grid.ColumnDefinitions>
+                                            <Label Grid.Column="0"
+                                                   Text="{Binding }"
+                                                   FontAttributes="Bold"
+                                                   TextColor="White"/>
+                                        </Grid>
+                                    </ViewCell>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackLayout>
+                </Frame>
 
 				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
