--- a/BolWallet/Views/BolCommunityPage.xaml
+++ b/BolWallet/Views/BolCommunityPage.xaml
@@ -4,8 +4,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
     x:DataType="viewModels:BolCommunityViewModel"
-    BackgroundColor="{DynamicResource SecondaryColor}">
-
+    BackgroundColor="{DynamicResource SecondaryColor}"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit">
+    
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
     <ScrollView>
         <Grid
             Padding="{OnPlatform iOS='30,60,30,30',
@@ -32,8 +39,17 @@
                 Grid.Row="2"
                 FontSize="12"
                 HorizontalOptions="FillAndExpand"
+                IsEnabled="{Binding IsCertifier, Converter={StaticResource InvertedBoolConverter}}"
 				Command="{Binding NavigateToRegisterAsCertifierPageCommand}"
                 Text="Register As Certifier" />
+
+            <Button
+                Grid.Row="3"
+                FontSize="12"
+                HorizontalOptions="FillAndExpand"
+                IsEnabled="{Binding IsCertifier}"
+                Command="{Binding UnRegisterAsCertifierCommand}"
+                Text="UnRegister As Certifier" />
 
 		</Grid>
     </ScrollView>
