Enable Whitelist and Certify button only when Certifier

--- a/BolWallet/Views/BolCommunityPage.xaml
+++ b/BolWallet/Views/BolCommunityPage.xaml
@@ -33,6 +33,7 @@
                 Grid.Row="1"
                 FontSize="12"
                 HorizontalOptions="FillAndExpand"
+                IsEnabled="{Binding IsCertifier}"
                 Text="Whitelist and Certify" />
 
 			<Button
