Implement IsSubmitted flag in CitizenshipForm within Userdata update

--- a/BolWallet/Pages/CreateCodenamePage.razor
+++ b/BolWallet/Pages/CreateCodenamePage.razor
@@ -110,7 +110,7 @@
         if (country is null)
             return;
 
-        var encryptedCitizenship = createCodenameViewModel.userData.CitizenshipMatrices.FirstOrDefault(c => c.CountryCode == country.Alpha3);
+        var encryptedCitizenship = createCodenameViewModel.userData.EncryptedCitizenshipForms.FirstOrDefault(c => c.CountryCode == country.Alpha3);
 
         if (encryptedCitizenship is null)
             return;
