Create EncryptedCitizenshipForm in citizenship selection page

--- a/BolWallet/Pages/CitizenshipPage.razor
+++ b/BolWallet/Pages/CitizenshipPage.razor
@@ -66,13 +66,24 @@
             var citizenshipsForm = context.Model as CitizenshipsForm;
 
             List<Country> citizenships = new List<Country>();
+            List<EncryptedCitizenshipForm> encryptedCitizenshipForms = new List<EncryptedCitizenshipForm>();
 
             foreach (var citizenshipName in citizenshipsForm.Citizenships.Split(",").Select(c => c.Trim()))
             {
-                citizenships.Add(_content.Countries.FirstOrDefault(c => c.Name == citizenshipName));
+                BolWallet.Models.Country citizenshipCountry = _content.Countries.FirstOrDefault(c => c.Name == citizenshipName);
+
+                citizenships.Add(citizenshipCountry);
+
+                encryptedCitizenshipForms.Add(new EncryptedCitizenshipForm()
+                {
+                    CountryName = citizenshipCountry.Name,
+                    CountryCode = citizenshipCountry.Alpha3,
+                    CitizenshipHashes = new Bol.Core.Model.CitizenshipHashTable()
+                });
             }
 
             userData.Citizenships = citizenships;
+            userData.EncryptedCitizenshipForms = encryptedCitizenshipForms;
 
             await secureRepository.SetAsync("userdata", userData);
 
